--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             --qa-question-font: 'Roboto', sans-serif;
             --qa-answer-font: 'Open Sans', sans-serif;
             --question-color: #2c3e50; /* Màu xanh đậm cho câu hỏi */
+            --slogan-font: 'Roboto', sans-serif;
+            --slogan-color: #2c3e50;
         }
 
         /* Reset CSS */
@@ -51,6 +53,36 @@
             margin-bottom: 20px;
             font-size: 2em;
             text-align: center;
+        }
+
+        .slogan-container {
+            width: 100%;
+            max-width: 800px;
+            background-color: var(--primary-color);
+            padding: 15px 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        #slogan {
+            font-family: var(--slogan-font);
+            font-size: 1.5em;
+            color: var(--white-bg);
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+            position: absolute;
+            width: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .slogan-container.active #slogan {
+            opacity: 1;
         }
 
         .container {
@@ -367,6 +399,11 @@
 </head>
 <body>
 
+    <!-- Phần Khẩu Hiệu Tham Gia Giao Thông -->
+    <div class="slogan-container">
+        <p id="slogan"></p>
+    </div>
+
     <div class="container">
         <h1>Nhận Diện Biển Báo Giao Thông</h1>
         <div style="position: relative; width: 100%; max-width: 600px;">
@@ -443,7 +480,6 @@
                 </ul>
             </div>
 
-            <!-- Thêm các câu hỏi khác nếu cần -->
             <!-- Câu hỏi 3 -->
             <button class="accordion" aria-expanded="false" aria-controls="panel3">3. Cách sử dụng đèn tín hiệu giao thông</button>
             <div class="panel" id="panel3">
@@ -821,6 +857,7 @@
         window.addEventListener('load', async () => {
             await loadModel();
             // Không khởi động camera ngay khi tải trang
+            startSloganRotation(); // Khởi động vòng quay khẩu hiệu
         });
 
         /**
@@ -907,6 +944,41 @@
                 }
             });
         });
+
+        /**
+         * Phần Khẩu Hiệu Tham Gia Giao Thông
+         */
+        const slogans = [
+            "An toàn giao thông - Hạnh phúc cho mọi nhà!",
+            "Đi đúng làn đường, an toàn trên mọi nẻo đường!",
+            "Đội mũ bảo hiểm - Vẹn tròn tương lai!",
+            "Đi bộ trên vỉa hè - An toàn cho bạn và mọi người!",
+            "Tuân thủ luật giao thông - Bảo vệ chính mình!",
+            "Không phóng nhanh, vượt ẩu - An toàn là trên hết!",
+            "Chậm mà chắc - Về nhà an toàn!"
+        ];
+
+        let currentSloganIndex = 0;
+        const sloganElement = document.getElementById('slogan');
+        const sloganContainer = document.querySelector('.slogan-container');
+
+        function showSlogan(index) {
+            sloganElement.textContent = slogans[index];
+            sloganContainer.classList.add('active');
+            setTimeout(() => {
+                sloganContainer.classList.remove('active');
+            }, 4000); // Hiển thị khẩu hiệu trong 4 giây để tạo khoảng trống cho hiệu ứng mờ dần
+        }
+
+        function startSloganRotation() {
+            showSlogan(currentSloganIndex);
+            currentSloganIndex = (currentSloganIndex + 1) % slogans.length;
+            setInterval(() => {
+                showSlogan(currentSloganIndex);
+                currentSloganIndex = (currentSloganIndex + 1) % slogans.length;
+            }, 5000); // Mỗi 5 giây một khẩu hiệu
+        }
+
     </script>
 
 </body>
